FullCalendar 7.x-2.x, xxxx-xx-xx
--------------------------------
#1036444 follow-up by aspilicious: Correct option names for Views UI overhaul.
#1036444 by aspilicious, tim.plunkett: Overhauled the Views UI.

FullCalendar 7.x-1.x, xxxx-xx-xx
--------------------------------
#1040596 by aspilicious: Fixed error on calendar page.
#1038822 by wildpoppy: Fixed extra closing H3 tag.
#1038442 by aspilicious: JS clean-up.
#1039912 by tim.plunkett: Fixed FullCalendar doubling on page.
#1011696 by aspilicious: Fixed drag-and-drop for subdomains.
#980180 follow-up by aspilicious: Extra trailing comma breaks fullcalendar in IE 7 & IE 6.
#1033110 by tim.plunkett | geerlingguy: Added link to configuration page.
#1033858 by aspilicious: Added translation support.

FullCalendar 7.x-1.2, 2011-01-19
--------------------------------
#1033010 by tim.plunkett: Provide a default view as an example.
#1032980 by tim.plunkett, aspilicious: Improved default styling for Bartik.
#1013456 by tim.plunkett: Documentation clean-up.
#1031924 by tim.plunkett | Jody Lynn: Fixed call to deprecated Drupal.parseJson.
#980886 follow-up by tim.plunkett: Add call to new fullcalendar.custom.css.
#980810 by tim.plunkett: Added option to use fullcalendar.min.js.
#980886 by aspilicious, tim.plunkett: Move FullCalendar plugin out of module into sites/all/libraries.
#933622 by tim.plunkett: Port drag-and-drop to Drupal 7.
#933622 by tim.plunkett: Port to Drupal 7.

FullCalendar 6.x-2.x, xxxx-xx-xx
--------------------------------
#1035246 by aspilicious: Fixed incompatiblity with Views 6.x-3.x.
#1038822 by wildpoppy: Fixed extra closing H3 tag.
#1038442 by aspilicious: JS clean-up.
#1039912 by tim.plunkett: Fixed FullCalendar doubling on page.
#1011696 by aspilicious: Fixed drag-and-drop for subdomains.
#980180 follow-up by aspilicious: Extra trailing comma breaks fullcalendar in IE 7 & IE 6.
#1033858 by aspilicious: Added translation support.
by tim.plunkett: Updated CHANGELOG.txt.
