@@ -1,5 +1,8 @@
 FullCalendar 7.x-2.x, xxxx-xx-xx
 --------------------------------
+#1044426 by aspilicious: Added RTL support.
+#1043222 by aspilicious, tim.plunkett: Removed the node (load) dependency.
+#910494 by aspilicious: Colorbox custom settings.
 #1036444 follow-up by aspilicious: Correct option names for Views UI overhaul.
 #1036444 by aspilicious, tim.plunkett: Overhauled the Views UI.
 
@@ -28,6 +31,7 @@ FullCalendar 7.x-1.2, 2011-01-19
 
 FullCalendar 6.x-2.x, xxxx-xx-xx
 --------------------------------
+#1032980 by aspilicious: Improved default styling for fullcalendar.
 #1035246 by aspilicious: Fixed incompatiblity with Views 6.x-3.x.
 #1038822 by wildpoppy: Fixed extra closing H3 tag.
 #1038442 by aspilicious: JS clean-up.
